<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Bitcoin Center</string>
    <string name="action_settings">Settings</string>
    <string name="market_list_text">Market List</string>
    <string name="currency">Currency</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="previous_close">Previous Close</string>
    <string name="latest_trade">Latest Trade</string>
    <string name="n_trades">Number of Trades</string>
    <string name="volume">Volume</string>
    <string name="currency_volume">Currency Volume</string>
    <string name="symbol">Symbol</string>
    <string name="btc">BTC</string>
    <string name="date">Date</string>
    <string name="by_text">Elías A. Angulo</string>
    <string name="about_text">The author of this app encourages to give feedback for further development. Also you can ask me for explicit features, that I\'ll implement if you give enough feedback or perhaps a donation&#8230;</string>
    <string name="donation_paypal">Donate with Paypal&#8230;</string>
    <string name="donation_bitcoin">Donate BTC&#8230;</string>
    <string name="purchase_premium">Purchase premium app.</string>
    <string name="send_email">Contact developer…</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="about">About&#8230;</string>
    <string name="update_markets">Update Markets!</string>
    <string name="low">Low</string>
    <string name="avg">Average</string>
    <string name="high">High</string>
    <string name="extended_view">Extended Market View</string>
    <string name="buy_n_sell">Buy and Sell Bitcoins…</string>
    <string name="bitstamp">Bitstamp.net</string>
    <!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
    -->

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>

</resources>