<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/element_row"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:weightSum="5"
    tools:context=".AndroidBitcoinCenter"
    tools:ignore="NestedWeights" >

    <ImageView
        android:id="@+id/btcIcon"
        style="@style/bitcoinIcon"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/Margin"
        android:contentDescription="@string/btc"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/element_column1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="@dimen/Margin"
            android:layout_weight="1"
            android:gravity="left|center_horizontal|fill_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/symbol_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/symbol" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/Margin"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/date" />

            <TextView
                android:id="@+id/currency_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/currency" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/element_column2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Margin"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ask_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/ask" />

            <TextView
                android:id="@+id/bid_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/bid" />

            <TextView
                android:id="@+id/close_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/close" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>